cs-registration/www/css/cs-registration.css
/*
    GLOBAL STYLES
*/

body {
    background-image:url('../images/bg_default.jpg');
    background-color: black;
    background-repeat:no-repeat;
    background-position:top center;
    color: white;
}

img {
    max-width: 100%;
}

input {
    color: black;
}

/*
    MAIN CONTAINER
*/
.container {
    /*border: 1px solid black;*/
    position: relative; /* Required for footer to be sticky within the container */

    background: none repeat scroll 0 0 rgba(0, 0, 0, 0.85);/*rgba(238, 238, 238, 0.9);*/

    padding: 10px;
    /*-webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;*/
}

.centered {
    margin: 0 auto;
    float: none;
    text-align: center;
}
/* iPad Portrait */
/*@media (min-width: 601px) and (max-width: 769px)
{
    .container {
        width: 728px;
        height: 1024px;
    }
}*/

/* iPad Landscape */
@media (min-width: 990px)
{
    /*body {
        max-width: 1024px;
        max-height: 768px;
        overflow-x: hidden;
    }*/
    .container {
        width: 1024px;
        height: 738px;
    }
}

/*iOS fix for extra space on the side */
@media
only screen and (-webkit-min-device-pixel-ratio: 1.5),
only screen and (-o-min-device-pixel-ratio: 3/2),
only screen and (min--moz-device-pixel-ratio: 1.5),
only screen and (min-device-pixel-ratio: 1.5){

    html,
    body{
        width:100%;
        overflow-x:hidden;
    }

}

/* iPhone 5 Landscape */
/*@media (min-width: 568px)*/
/*{*/
    /*.container {*/
        /*width: 568px;*/
        /*height: 320px;*/
    /*}*/
/*}*/

/* iPhone 5 Portrait */
/*@media (min-width: 320px) and (min-height: 568px)*/
/*{*/
    /*.container {*/
        /*width: 320px;*/
        /*height: 568px;*/
    /*}*/
/*}*/

/* iPhone <=4 Landscape */
/*@media (min-width: 480px)*/
/*{*/
    /*.container {*/
        /*width: 480px;*/
        /*height: 320px;*/
    /*}*/
/*}*/

/* iPhone <=4 Portrait */
/*@media (min-width: 320px) and (min-height: 480px)*/
/*{*/
    /*.container {*/
        /*width: 320px;*/
        /*height: 480px;*/
    /*}*/
/*}*/

/*
    TOP HEADER
*/

.topHeader {
    margin-bottom: 10px;
    padding-top: 10px;
}

.topLeftBackArrow {
    text-align: left;
}


@media (min-width: 768px) {
    .topCenterHeader {
        font-size: 30px;
        text-align: center;
        margin: 0px;
    }
}

/* For mobile responsiveness */
@media (max-width: 767px) {
    .topCenterHeader {
        font-size: 20px;
        text-align: center;
        margin: 0px;
    }
}


.topRightDropdown {
    text-align: right;
}


@media (min-width: 768px) {
    .languageDropdown {
        float: right; z-index: 1049;
    }
}

/* For mobile responsiveness */
@media (max-width: 767px) {
    .languageDropdown {
        float: right; z-index: 1049;
    }
}


/* For mobile responsiveness */
@media (max-width: 767px) {
    .currentCultureString {
        display: none !important;
    }
}

@media (min-width: 768px) {
    .dropdown dd, .dropdown dt, .dropdown ul { margin:0px; padding:0px; }
    .dropdown dd { position:relative; }
    .dropdown a, .dropdown a:visited { color:#816c5b; text-decoration:none; outline:none;}
    .dropdown a:hover { color:#5d4617;}
    .dropdown dt a:hover { color:#5d4617; border: 1px solid #d0c9af;}
    .dropdown dt a {background:#e4dfcb url("../images/flags/arrow.png") no-repeat scroll right center; display:block; padding-right:20px;
        border:1px solid #d4ca9a; width:180px;}
    .dropdown dt a span {cursor:pointer; display:block; padding:5px;}
    .dropdown dd ul { background:#e4dfcb none repeat scroll 0 0; border:1px solid #d4ca9a; color:#C5C0B0; display:none;
        left:0px; padding:5px 0px; position:absolute; top:2px; width:auto; min-width:180px; max-width: 180px; list-style:none;}
    .dropdown span.value { display:none;}
    .dropdown dd ul li a { padding:5px; display:block;}
    .dropdown dd ul li a:hover { background-color:#d0c9af;}
    img.flag { border:none; vertical-align:baseline; margin-left:10px;}
}

/* For mobile responsiveness */
@media (max-width: 767px) {
    .dropdown dd, .dropdown dt, .dropdown ul { margin:0px; padding:0px; }
    .dropdown dd { position:relative; }
    .dropdown a, .dropdown a:visited { color:#816c5b; text-decoration:none; outline:none;}
    .dropdown a:hover { color:#5d4617;}
    .dropdown dt a:hover { color:#5d4617; border: 1px solid #d0c9af;}
    .dropdown dt a {background:#e4dfcb url("../images/flags/arrow.png") no-repeat scroll right center; display:block; padding-right:20px;
        border:1px solid #d4ca9a; width:60px;}
    .dropdown dt a span {cursor:pointer; display:block; padding:5px;}
    .dropdown dd ul { background:#e4dfcb none repeat scroll 0 0; border:1px solid #d4ca9a; color:#C5C0B0; display:none;
        left:0px; padding:5px 0px; position:absolute; top:2px; width:auto; min-width:60px; max-width: 60px; list-style:none;}
    .dropdown span.value { display:none;}
    .dropdown dd ul li a { padding:5px; display:block;}
    .dropdown dd ul li a:hover { background-color:#d0c9af;}
    img.flag { border:none; vertical-align:baseline; margin-left:10px;}
}

/*
    BOTTOM FOOTER
*/
.footer {
    position: absolute; /* Required for footer to be sticky within the container */
    font-size: 24px;
    margin-bottom: 20px;
}
.bottomLeftFooter {
    text-align: center;
    padding-right: 0;
}

.bottomRightFooter {
    text-align: center;
    padding-left: 0;
}

.leftButton {
    width: 100%;
    height: 100%;
    margin: 0;
}

.rightButton {
    width: 100%;
    height: 100%;
    margin: 0;
}

/*
    STEP 1
*/

.step1RegistrationHeader {
    margin-top: 20px;
}

.step1RegistrationBody {
    margin-top: 30px;
}

/*
    STEP 2
*/

.requiredAsterisk {
    color: red;
}

.cameraPicture {
    max-width: 480px;
    max-height: 200px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.facebookProfilePicture {
    max-width: 480px;
    max-height: 200px;
    padding-top: 10px;
    padding-bottom: 10px;
}
/* ... */

